--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="cards-container large">
                     <div class="card">
                         <a href="https://www.thermas.com.br/ingresso/parceiros/mcm-viagens">
-                            <img src="imagens/thermas_Card1.jpg" alt="Thermas de São Pedro">
+                            <img src="imagens/thermas_card1.jpg" alt="Thermas de São Pedro">
                             <div class="card-content">
                                 <h3>INGRESSO PARA O THERMAS DE SÃO PEDRO</h3>
                                 <p>Vários combos de ingresso para o Thermas de Águas de São Pedro, com desconto.</p>
