--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="cards-container large">
             <div class="card">
                 <a href="https://www.thermas.com.br/ingresso/parceiros/mcm-viagens">
-                    <img src="/thermas_card1.jpg" alt="Thermas de São Pedro">
+                    <img src="thermas_card1.jpg" alt="Thermas de São Pedro">
                     <div class="card-content">
                         <h3>INGRESSO PARA O THERMAS DE SÃO PEDRO</h3>
                         <p>Vários combos de ingresso para o Thermas de Águas de São Pedro, com desconto.</p>
@@ -113,7 +113,7 @@
 
             <div class="card">
                 <a href="pagina-de-compra.html">
-                    <img src="/ultimahora.avif" alt="Pacote de Viagem">
+                    <img src="ultimahora.avif" alt="Pacote de Viagem">
                     <div class="card-content">
                         <h3>Real Castilha Hotel (São Paulo) - 51% Off, de <s>R$ 378,00</s> por R$ 181,00</h3>
                         <p>Este hotel com café da manhã de cortesia fica a poucos minutos de caminhada do Theatro Municipal de São Paulo.</p>
@@ -124,7 +124,7 @@
 
             <div class="card">
                 <a href="pagina-de-compra.html">
-                    <img src="/ladigaga1.jpg" alt="Gls">
+                    <img src="ladigaga1.jpg" alt="Gls">
                     <div class="card-content">
                         <h3>Hotéis e Hostels com desconto para o Show da Lady Gaga em Copacabana</h3>
                         <p>Quer ir ao show e ver a estrela Lady Gaga no Rio? Garanta sua estadia, entre em contato e cote os melhores preços.</p>
